<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.example.aazarjameeel.udacityquizapp.MainActivity">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/questionOne"
            android:textSize="18sp"/>

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton android:id="@+id/radio_answerOneA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answerOneA"
                android:onClick="onRadioButtonQ1Clicked"/>
            <RadioButton android:id="@+id/radio_answerOneB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answerOneB"
                android:onClick="onRadioButtonQ1Clicked"/>
            <RadioButton android:id="@+id/radio_answerOneC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answerOneC"
                android:onClick="onRadioButtonQ1Clicked"/>
        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/questionTwo"
            android:textSize="18sp"/>

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton android:id="@+id/radio_answerTwoA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answerTwoA"
                android:onClick="onRadioButtonQ2Clicked" />
            <RadioButton android:id="@+id/radio_answerTwoB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answerTwoB"
                android:onClick="onRadioButtonQ2Clicked" />
            <RadioButton android:id="@+id/radio_answerTwoC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answerTwoC"
                android:onClick="onRadioButtonQ2Clicked" />
        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/questionThree"
            android:textSize="18sp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_answerthree"
            android:textSize="18sp"
            android:hint="Capital of Pakistan" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/questionFour"
            android:textSize="18sp"/>

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton android:id="@+id/radio_answerFourA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answerFourA"
                android:onClick="onRadioButtonQ4Clicked"/>
            <RadioButton android:id="@+id/radio_answerFourB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answerFourB"
                android:onClick="onRadioButtonQ4Clicked"/>
            <RadioButton android:id="@+id/radio_answerFourC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answerFourC"
                android:onClick="onRadioButtonQ4Clicked"/>
        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/questionFive"
            android:textSize="18sp"/>

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton android:id="@+id/radio_answerFiveA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answerFiveA"
                android:onClick="onRadioButtonQ5Clicked"/>
            <RadioButton android:id="@+id/radio_answerFiveB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answerFiveB"
                android:onClick="onRadioButtonQ5Clicked"/>
            <RadioButton android:id="@+id/radio_answerFiveC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answerFiveC"
                android:onClick="onRadioButtonQ5Clicked"/>
        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/questionSix"
            android:textSize="18sp"/>

            <CheckBox android:id="@+id/checkbox_answerSixA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answerSixA"
                android:onClick="onCheckboxQ6Clicked" />
            <CheckBox android:id="@+id/checkbox_answerSixB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answerSixB"
                android:onClick="onCheckboxQ6Clicked"/>
            <CheckBox android:id="@+id/checkbox_answerSixC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answerSixC"
                android:onClick="onCheckboxQ6Clicked" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp" />

        <Button
            android:id="@+id/done"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:text="Done"
            android:textColor="@android:color/white"
            android:onClick="displayScore"
            />

        <TextView
            android:id="@+id/textScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="ffff"
            android:textSize="26sp"
            android:gravity="center"
            android:textAllCaps="true"
            android:textColor="@android:color/holo_orange_dark"/>

    </LinearLayout>
</ScrollView>
